2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/mysql.vapi:

	Add MySQL bindings, patch by Jukka-Pekka Iivonen, fixes bug 567342

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:

	Fix struct base type error message, patch by Carlos Cadete,
	fixes bug 567366

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_datalist*_get bindings, patch by Yu Feng, fixes bug 567324

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala:
	* gobject/valaccodearraymodule.vala:

	Add array_length_cexpr CCode attribute for fields with constant
	array length, patch by Andreas Brauchli, fixes bug 567301

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Support void ref functions

	* vapigen/valagidlparser.vala:

	Detect void ref functions, patch by Andreas Brauchli,
	fixes bug 549061

	* vapi/gconf-2.0.vapi: regenerated

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodestructmodule.vala:
	* gobject/valagobjectmodule.vala:

	Fix typedef generation for private types, patch by Yu Feng,
	fixes bug 567237

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Warn about possibly missing GLib.Object prerequisite,
	patch by Andreas Brauchli, fixes bug 554329

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am:
	* tests/dbus/basic-types.test:

	Test marshalling of basic types over D-Bus

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala:
	* vala/valaparser.vala:

	Use `internal' accessibility for namespace members by default

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/:

	Rearrange test cases

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am:
	* tests/basic-types/arrays.test:

	Improve array tests

2009-01-16  Jürg Billeter  <j@bitron.ch>

	* tests/basic-types/strings.test:

	Improve string tests

2009-01-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:
