@@ -622,8 +622,8 @@ public class Vala.FlowAnalyzer : CodeVisitor {
 		foreach (SwitchSection section in stmt.get_sections ()) {
 			current_block = new BasicBlock ();
 			condition_block.connect (current_block);
-			foreach (Statement stmt in section.get_statements ()) {
-				stmt.accept (this);
+			foreach (Statement section_stmt in section.get_statements ()) {
+				section_stmt.accept (this);
 			}
 
 			if (section.has_default_label ()) {
